@@ -17,7 +17,7 @@
 .\" WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
 .\" MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 .\"
-.TH PCAP_COMPILE 3PCAP "25 November 2024"
+.TH PCAP_COMPILE 3PCAP "24 January 2025"
 .SH NAME
 pcap_compile \- compile a filter expression
 .SH SYNOPSIS
@@ -56,6 +56,39 @@ than one network, a value of
 can be supplied; tests
 for IPv4 broadcast addresses will fail to compile, but all other tests in
 the filter program will be OK.
+.PP
+On Linux, if the
+.B pcap_t
+handle corresponds to a live packet capture, the resulting filter program
+may use Linux BPF extensions.  This works transparently if the filter
+program is used to filter packets on the same
+.B pcap_t
+handle, which should be done when possible.  In other use cases trying to
+use a filter program with BPF extensions in
+.BR \%pcap_offline_filter (3PCAP)
+or for filtering an input savefile would reject more packets than expected
+because the extensions depend on auxiliary packet data, which would not be
+available.  The workaround is to compile the filter without the extensions
+by using a
+.B pcap_t
+handle from
+.BR \%pcap_open_dead (3PCAP)
+or
+.BR \%pcap_open_offline (3PCAP)
+rather than a handle from
+.BR \%pcap_create (3PCAP)
+or
+.BR \%pcap_open_live (3PCAP).
+.PP
+If BPF extensions are disabled as described above or the OS is not Linux,
+.BR pcap_compile ()
+may start rejecting some filter expressions for some link-layer header types,
+this is the expected behaviour.  For example, the
+.B ifindex
+keyword is valid for any live capture on Linux, but when reading packets
+from a savefile, regardless of the OS it is valid for
+.B DLT_LINUX_SLL2
+only.
 .SH RETURN VALUE
 .BR pcap_compile ()
 returns
